# mcp-forge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  catalog.json  release-notes.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  template_contribution.yml
.github/workflows/: ci.yml  update-packaging.yml
docs/: version-management.md
docs/examples/: basic-usage.md
docs/reference/: command-reference.md
packaging/homebrew/: mcp-forge.rb
packaging/scoop/: mcp-forge.json
schemas/: template-schema.json
scripts/: optimize-binary.sh  release.sh  update-version.sh
src/: backup.rs  bulk.rs  cli.rs  config.rs  github.rs  main.rs  profiles.rs  search.rs  templates.rs  utils.rs  validation.rs
