[package]
name = "mcp-forge"
version = "0.3.0"
edition = "2021"
description = "A uvx-compatible CLI tool for managing Claude Desktop MCP server configurations"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mcp-forge/mcp-forge"
keywords = ["cli", "mcp", "claude", "configuration", "templates"]
categories = ["command-line-utilities"]

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "color"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async HTTP client for GitHub API
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Template engine
handlebars = "5.1"

# Cross-platform paths and directories
dirs = "5.0"

# Interactive CLI prompts
inquire = "0.7"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system operations
fs_extra = "1.3"

# Date/time for caching
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2.5"

# Base64 encoding/decoding for GitHub API
base64 = "0.21"

# Terminal colors
colored = "2.0"

# Regular expressions for pattern matching
regex = "1.11"

# YAML support for import/export
serde_yaml = "0.9"

# Logging
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
