[package]
name = "mcp-forge"
version = "0.4.1"
edition = "2021"
authors = ["Andy Cross <andy@crossmoore.io>"]
description = "A powerful CLI tool for managing Claude Desktop MCP server configurations"
readme = "README.md"
homepage = "https://github.com/AndyCross/mcp-forge"
repository = "https://github.com/AndyCross/mcp-forge"
license = "MIT OR Apache-2.0"
keywords = ["claude", "mcp", "cli", "configuration", "desktop"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "target/",
    ".git/",
    ".github/",
    "docs/",
    "packaging/",
    "scripts/",
    "*.log",
    ".DS_Store"
]

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "color"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async HTTP client for GitHub API
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Template engine
handlebars = "5.1"

# Cross-platform paths and directories
dirs = "5.0"

# Interactive CLI prompts
inquire = "0.7"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system operations
fs_extra = "1.3"

# Date/time for caching
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2.5"

# Base64 encoding/decoding for GitHub API
base64 = "0.21"

# Terminal colors
colored = "2.0"

# Regular expressions for pattern matching
regex = "1.11"

# YAML support for import/export
serde_yaml = "0.9"

# Logging
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

# Optimized release profile for distribution
[profile.release-optimized]
inherits = "release"
opt-level = "z"          # Optimize for size
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Better optimization
panic = "abort"          # Smaller binary size
strip = true             # Strip symbols
